Improve Ko-fi visibility

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -285,7 +285,8 @@
     "newest_tournament": "Newest Tournament",
     "newest_community": "Newest Community",
     "see_more": "See More...",
-    "buy_me_a_coffee": "Buy me a coffee",
+    "buy_me_a_coffee": "Support VTES Decks",
+    "buy_me_a_coffee_message": "This site is 100% free and powered by the community.<br>If VTES Decks helps you, consider buying me a coffee ☕",
     "contact_support": "Contact Support",
     "whats_new": "What's new in v{{ version }} ({{ date }})"
   },
