--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -285,7 +285,8 @@
     "newest_tournament": "Torneo Nuevos",
     "newest_community": "Comunidad Nuevos",
     "see_more": "Ver más...",
-    "buy_me_a_coffee": "Invítame a un café",
+    "buy_me_a_coffee": "Apoyá VTES Decks",
+    "buy_me_a_coffee_message": "Esta web es gratuita y se mantiene gracias a la comunidad.<br>Un café ayuda a cubrir el servidor mensual ☕",
     "contact_support": "Contactar Soporte",
     "whats_new": "Novedades en v{{ version }} ({{ date }})"
   },
