--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -286,7 +286,8 @@
     "newest_tournament": "Torneios mais novos",
     "newest_community": "Comunidades mais novas",
     "see_more": "Ver mais...",
-    "buy_me_a_coffee": "Compre um café",
+    "buy_me_a_coffee": "Apoie o VTES Decks",
+    "buy_me_a_coffee_message": "Este site é 100% gratuito e mantido pela comunidade.<br>Se o VTES Decks te ajuda, que tal oferecer um café? ☕",
     "contact_support": "Contatar Suporte"
   },
   "import_amaranth": {
