Add missing translations

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -647,6 +647,8 @@
     "code": "Code",
     "quote": "Quote",
     "table": "Table",
+    "discipline": "Discipline",
+    "clan": "Clan",
     "help": "Help"
   }
 }
