--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -647,6 +647,8 @@
     "code": "Código",
     "quote": "Cita",
     "table": "Tabla",
+    "discipline": "Disciplina",
+    "clan": "Clan",
     "help": "Ayuda"
   }
 }
