Enhanced deck filtering, added card copies in availability sections, and included user's decks

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -171,7 +171,8 @@
     "promo": "Promo",
     "private_deck": "Private Deck",
     "restore_deck": "Restore Deck",
-    "print": "Print"
+    "print": "Print",
+    "my_decks": "Where have I used it?"
   },
   "decks": {
     "total_decks": "<strong>{{ total }}</strong> decks",
