Add Similar Decks section to the deck detail page for improved user navigation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -108,7 +108,8 @@
     "deck_copied": "Deck copied to clipboard",
     "export": "Export",
     "draw": "Draw",
-    "edit": "Edit"
+    "edit": "Edit",
+    "similar_decks": "Similar Decks"
   },
   "deck_builder": {
     "deck_not_exists": "Deck doesn't exists. Please try again later.",
