--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -108,7 +108,8 @@
     "deck_copied": "Mazo copiado para a área de transferência",
     "export": "Exportar",
     "draw": "Draw",
-    "edit": "Editar"
+    "edit": "Editar",
+    "similar_decks": "Decks parecidos"
   },
   "deck_builder": {
     "deck_not_exists": "O mazo não existe. Tente novamente mais tarde.",
