--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -290,8 +290,8 @@
     "newest_tournament": "Newest Tournament",
     "newest_community": "Newest Community",
     "see_more": "See More...",
-    "buy_me_a_coffee": "Support VTES Decks",
-    "buy_me_a_coffee_message": "This site is 100% free and powered by the community.<br>If VTES Decks helps you, consider buying me a coffee ☕",
+    "patreon": "Support on Patreon",
+    "patreon_message": "This site is 100% free and powered by the community.<br>If VTES Decks helps you, consider supporting me on Patreon ❤️",
     "contact_support": "Contact Support",
     "whats_new": "What's new in v{{ version }} ({{ date }})"
   },
