Improve update messages, and add localization for version installation in multiple languages

--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -391,6 +391,7 @@
     "unexpected_error": "Erro inesperado. Por favor, tente novamente mais tarde.",
     "unexpected_error_with_message": "{{ message }}. Por favor, tente novamente mais tarde.",
     "new_version_available": "Uma nova versão do aplicativo está sendo carregada. Por favor, aguarde alguns segundos ou pressione Ctrl + F5 para atualizar.",
+    "new_version_installing": "Boas notícias! Uma atualização está sendo instalada em segundo plano.",
     "not_required": "Não requerido"
   },
   "table_seating": {
