--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -391,6 +391,7 @@
     "unexpected_error": "Unexpected error. Please try again later.",
     "unexpected_error_with_message": "{{ message }}. Please try again later.",
     "new_version_available": "A new version of the app is loading. Please wait a few seconds or press Ctrl + F5 to refresh.",
+    "new_version_installing": "Good news! An update is being installed in the background.",
     "not_required": "Not Required"
   },
   "table_seating": {
