--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -391,6 +391,7 @@
     "unexpected_error": "Error inesperado. Por favor, inténtelo de nuevo más tarde.",
     "unexpected_error_with_message": "{{ message }}. Por favor, inténtelo de nuevo más tarde.",
     "new_version_available": "Se está cargando una nueva versión de la aplicación. Por favor, espera unos segundos o presiona Ctrl + F5 para actualizar.",
+    "new_version_installing": "¡Buenas noticias! Se está instalando una actualización en segundo plano.",
     "not_required": "No requerido"
   },
   "table_seating": {
