feat(collection): implement collection tracker

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -660,5 +660,44 @@
     "discipline": "Discipline",
     "clan": "Clan",
     "help": "Help"
+  },
+  "collection": {
+    "title": "Collection",
+    "column_number": "Qty",
+    "column_name": "Name",
+    "column_set": "Set",
+    "column_condition": "Condition",
+    "column_language": "Language",
+    "column_binder": "Binder",
+    "column_notes": "Notes",
+    "column_icon": "Icon",
+    "column_description": "Description",
+    "column_visibility": "Visibility",
+    "all": "All",
+    "crypt": "Crypt",
+    "library": "Library",
+    "edit": "Edit",
+    "delete": "Delete from Collection",
+    "no_cards_found": "No cards found in your collection",
+    "items_per_page": "{{ count }} items per page",
+    "binders": "Binders",
+    "public": "Public",
+    "private": "Private",
+    "delete_binder": "Delete Binder (Not Cards)",
+    "delete_binder_and_cards": "Delete Binder (And Cards)",
+    "add_card": "Add Card",
+    "add_binder": "Add Binder",
+    "view_all": "View All",
+    "edit_binder": "Edit Binder",
+    "share": "Share",
+    "binder": "Binder",
+    "name": "Name",
+    "icon": "Icon",
+    "visibility": "Visibility",
+    "description": "Description",
+    "save": "Save",
+    "binder_delete_title": "Delete this binder?",
+    "binder_delete_message_with_cards": "Are you sure you want to delete <strong>{{ binderName }}</strong> and <strong>ALL</strong> of the cards inside of it?<br><br><span class=\"text-danger\">NOTE: There is no way to undo this action.</span>",
+    "binder_delete_message_without_cards": "Are you sure you want to delete <strong>{{ binderName }}</strong>? This will not delete the cards in this binder, they will just be moved back into your collection.<br><br><span class=\"text-danger\">NOTE: There is no way to undo this action.</span>"
   }
 }
