--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -46,7 +46,8 @@
     "taints": "Taints",
     "limited_format": "Limited Format",
     "card_text": "Card Text",
-    "card_text_placeholder": "Enter text or use /your-regex/"
+    "card_text_placeholder": "Enter text or use /your-regex/",
+    "set": "Set"
   },
   "crypt_section": {
     "card_name": "Card Name",
@@ -323,7 +324,8 @@
     "taints": "Taints",
     "limited_format": "Limited Format",
     "card_text": "Card Text",
-    "card_text_placeholder": "Enter text or use /your-regex/"
+    "card_text_placeholder": "Enter text or use /your-regex/",
+    "set": "Set"
   },
   "library_section": {
     "card_name": "Card Name",
