--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -46,7 +46,8 @@
     "taints": "Características",
     "limited_format": "Formato Limitado",
     "card_text": "Texto de la carta",
-    "card_text_placeholder": "Introduce el texto o usa /tu-regex/"
+    "card_text_placeholder": "Introduce el texto o usa /tu-regex/",
+    "set": "Expansion"
   },
   "crypt_section": {
     "card_name": "Nombre de carta",
@@ -323,7 +324,8 @@
     "taints": "Características",
     "limited_format": "Formato Limitado",
     "card_text": "Texto de la carta",
-    "card_text_placeholder": "Introduce el texto o usa /tu-regex/"
+    "card_text_placeholder": "Introduce el texto o usa /tu-regex/",
+    "set": "Expansion"
   },
   "library_section": {
     "card_name": "Nombre de carta",
