--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -46,7 +46,8 @@
     "taints": "Taints",
     "limited_format": "Formato Limitado",
     "card_text": "Texto do cartão",
-    "card_text_placeholder": "Digite o texto ou use /seu-regex/"
+    "card_text_placeholder": "Digite o texto ou use /seu-regex/",
+    "set": "Expansão"
   },
   "crypt_section": {
     "card_name": "Nome do cartão",
@@ -323,7 +324,8 @@
     "taints": "Taints",
     "limited_format": "Formato Limitado",
     "card_text": "Texto do cartão",
-    "card_text_placeholder": "Digite o texto ou use /seu-regex/"
+    "card_text_placeholder": "Digite o texto ou use /seu-regex/",
+    "set": "Expansão"
   },
   "library_section": {
     "card_name": "Nome do cartão",
