--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -701,6 +701,23 @@
     "save": "Save",
     "binder_delete_title": "Delete this binder?",
     "binder_delete_message_with_cards": "Are you sure you want to delete <strong>{{ binderName }}</strong> and <strong>ALL</strong> of the cards inside of it?<br><br><span class=\"text-danger\">NOTE: There is no way to undo this action.</span>",
-    "binder_delete_message_without_cards": "Are you sure you want to delete <strong>{{ binderName }}</strong>? This will not delete the cards in this binder, they will just be moved back into your collection.<br><br><span class=\"text-danger\">NOTE: There is no way to undo this action.</span>"
+    "binder_delete_message_without_cards": "Are you sure you want to delete <strong>{{ binderName }}</strong>? This will not delete the cards in this binder, they will just be moved back into your collection.<br><br><span class=\"text-danger\">NOTE: There is no way to undo this action.</span>",
+    "add_to_collection": "Add to Collection",
+    "save_and_close": "Save & Close",
+    "save_and_more": "Save & Add More",
+    "search_label": "Search for a card, then fill out all the properties:",
+    "search_placeholder": "Find card by Name",
+    "notes_placeholder": "Enter notes about the card...",
+    "condition_mint": "Mint",
+    "condition_near_mint": "Near Mint",
+    "condition_excellent": "Excellent",
+    "condition_good": "Good",
+    "condition_lightly_played": "Lightly Played",
+    "condition_played": "Played",
+    "condition_poor": "Poor",
+    "none": "None",
+    "quantity": "Quantity",
+    "must_3_characters": "Must be at least 3 characters",
+    "min_quantity": "At least one card is required"
   }
 }
