Enhance collection import modal with file input handling and dynamic binder options; update collection cards list with filtering and grouping functionality

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -732,6 +732,8 @@
     "format": "Format",
     "file": "File",
     "collection_imported": "Collection imported successfully!",
-    "keep_binder": "Keep binder from CSV"
+    "keep_binder": "Keep binder from CSV",
+    "filter": "Filter",
+    "group_by": "Group by"
   }
 }
