feat(collection): add bulk edit functionality for cards and collection deletion
- Implemented bulkEditCards method in CollectionApiDataService to allow editing multiple cards at once.
- Added deleteCollection method to remove entire collections.
- Enhanced UI components to display collection statistics and improved card management features.
- Added confirmation dialogs for deletion actions with appropriate messages.
- Updated translations for new features and UI elements.

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -177,7 +177,9 @@
     "restore_deck": "Restaurar mazo",
     "print": "Imprimir",
     "my_decks": "¿En qué mazos la utilizo?",
-    "set_image_not_available": "Imagen de la expansion no disponible, utilizando imagen por defecto"
+    "set_image_not_available": "Imagen de la expansion no disponible, utilizando imagen por defecto",
+    "my_collection": "¿Cuántas tengo?",
+    "view_collection": "Ver en Colección"
   },
   "decks": {
     "total_decks": "<strong>{{ total }}</strong> mazos",
