--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -177,7 +177,9 @@
     "restore_deck": "Restore Deck",
     "print": "Print",
     "my_decks": "Where have I used it?",
-    "set_image_not_available": "Set image not available, using default image"
+    "set_image_not_available": "Set image not available, using default image",
+    "my_collection": "How many do I own?",
+    "view_collection": "View in Collection"
   },
   "decks": {
     "total_decks": "<strong>{{ total }}</strong> decks",
@@ -384,6 +386,7 @@
   "shared": {
     "ok": "Ok",
     "cancel": "Cancel",
+    "delete": "Delete",
     "import": "Import",
     "close": "Close",
     "loading": "Loading",
@@ -701,9 +704,14 @@
     "visibility": "Visibility",
     "description": "Description",
     "save": "Save",
+    "collection_delete": "Delete Entire Collection",
+    "collection_delete_title": "Delete your entire collection?",
+    "collection_delete_message": "Are you sure you want to delete your <strong>ENTIRE</strong> collection? This will delete <strong>ALL</strong> cards in your collection.<br><br><span class=\"text-danger\">NOTE: There is no way to undo this action.</span>",
     "binder_delete_title": "Delete this binder?",
     "binder_delete_message_with_cards": "Are you sure you want to delete <strong>{{ binderName }}</strong> and <strong>ALL</strong> of the cards inside of it?<br><br><span class=\"text-danger\">NOTE: There is no way to undo this action.</span>",
     "binder_delete_message_without_cards": "Are you sure you want to delete <strong>{{ binderName }}</strong>? This will not delete the cards in this binder, they will just be moved back into your collection.<br><br><span class=\"text-danger\">NOTE: There is no way to undo this action.</span>",
+    "card_delete_title": "Delete Cards?",
+    "card_delete_message": "Are you sure you want to delete these cards?<br><br><span class=\"text-danger\">NOTE: There is no way to undo this action.</span>",
     "add_to_collection": "Add to Collection",
     "save_and_close": "Save & Close",
     "save_and_more": "Save & Add More",
@@ -734,6 +742,16 @@
     "collection_imported": "Collection imported successfully!",
     "keep_binder": "Keep binder from CSV",
     "filter": "Filter",
-    "group_by": "Group by"
+    "group_by": "Group by",
+    "toggle_multiselect": "Toggle Multi-Select",
+    "multi_select_info": "{{ count }} cards selected",
+    "select_all": "All",
+    "select_none": "None",
+    "bulk_edit": "Bulk Edit",
+    "bulk_edit_title": "Bulk Edit Cards",
+    "bulk_edit_message": "You can edit the selected cards in bulk.<br>Choose the properties you want to edit and provide the new values.",
+    "keep_binder_bulk": "Keep current binder",
+    "keep_condition_bulk": "Keep current condition",
+    "keep_language_bulk": "Keep current language"
   }
 }
