feat(collection): implement collection tracker functionality and update related components

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -149,7 +149,8 @@
     "clipboard": "Clipboard",
     "file": "File",
     "limited_format": "Limited Format",
-    "deck_copied": "Deck copied to clipboard"
+    "deck_copied": "Deck copied to clipboard",
+    "collection_tracker": "Collection Tracker"
   },
   "deck_builder_service": {
     "min_crypt_cards": "Crypt must have at least {{ minCrypt }} cards",
